fixed left spacing issue for list items

--- a/scss/components/_list-styling.scss
+++ b/scss/components/_list-styling.scss
@@ -3,7 +3,7 @@
 	// if you want to add this to your list (for htdocs)
 	line-height: 1.6em;
     list-style: none outside none;
-    margin-left: 0.4rem;
+    margin-left: 0.9rem;
 
     li{
     	list-style-position: inside;
