--- a/scss/layout/_aside.scss
+++ b/scss/layout/_aside.scss
@@ -11,6 +11,7 @@
 
 	.side-nav, .menu {
 		padding: rem-calc(0);
+		margin-left: 0px;
 
 		li{
 
